--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "personal",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "finance-app-nextjs",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.14"
   },
   "devDependencies": {
-    "@types/node": "^22.7.4",
-    "prisma": "^5.20.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14"
   }
 }
