--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # .env
 DATABASE_URL="postgresql://myappuser:mypassword@localhost:5432/myappdb?schema=public"
+DIRECT_URL="postgresql://myappuser:mypassword@localhost:5432/myappdb?schema=public"
