refactor: adjust the docker so its similar to vercel one and uses local env

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
-# .env
-DATABASE_URL="postgresql://myappuser:mypassword@localhost:5432/myappdb?schema=public"
-DIRECT_URL="postgresql://myappuser:mypassword@localhost:5432/myappdb?schema=public"
+# Created by Vercel CLI
+DATABASE_URL="${POSTGRES_PRISMA_URL}"
+DIRECT_URL="${POSTGRES_URL_NON_POOLING}"
+POSTGRES_DATABASE="verceldb"
+POSTGRES_HOST="ep-damp-heart-a298uyem-pooler.eu-central-1.aws.neon.tech"
+POSTGRES_PASSWORD="0xcNrVlk8MJt"
+POSTGRES_PRISMA_URL="postgres://default:0xcNrVlk8MJt@ep-damp-heart-a298uyem-pooler.eu-central-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
+POSTGRES_URL="postgres://default:0xcNrVlk8MJt@ep-damp-heart-a298uyem-pooler.eu-central-1.aws.neon.tech/verceldb?sslmode=require"
+POSTGRES_URL_NON_POOLING="postgres://default:0xcNrVlk8MJt@ep-damp-heart-a298uyem.eu-central-1.aws.neon.tech/verceldb?sslmode=require"
+POSTGRES_URL_NO_SSL="postgres://default:0xcNrVlk8MJt@ep-damp-heart-a298uyem-pooler.eu-central-1.aws.neon.tech/verceldb"
+POSTGRES_USER="default"
