--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:17
-    environment:
-      POSTGRES_USER: myappuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: myappdb
-    volumes:
-      - db_data:/var/lib/postgresql/data
+  postgres:
+    image: postgres:13
     ports:
-      - '5432:5432'
+      - 5432:5432
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
-  db_data:
+  postgres-data:
